# Food101

./: .gitattributes  readme.md
data/: eda.py  readme.md
data/datasets/: food101_cls.dvc
food_ml/: pyproject.toml
food_ml/food_recognizer/: __init__.py  food_recognizer.py
food_ml/food_recognizer/data/: classes_food.npy
microservice/: Dockerfile  food_recognizer.py  main.py  model.pth  readme.md  requirements.txt
microservice/static/css/: styles.css 
results/: readme.md
src/: config.yaml  inference.py  train.py
src/utils/: __auxiliary.py  __dataloader.py  __init__.py  __models_zoo.py  __train.py
telegram/: bot.py  readme.md  requiremnts.txt
tests/: some_test.py
